...
  };

  return (
    <>
      <AppTextField
        testID={titleTestID}
        placeholder="Task title"
        value={title}
        onChangeText={onChangeTitle}
        returnKeyType="next"
        blurOnSubmit={false}
        onSubmitEditing={() => descriptionInputRef?.current?.focus()}
      />
...
        onSubmitEditing={() => durationInputRef?.current?.focus()}
      />

      <AppTextField
        ref={durationInputRef}
        testID={durationTestID}
        placeholder="Duration in minutes (optional)"
        keyboardType="number-pad"
        value={duration}
        onChangeText={onChangeDuration}
        returnKeyType="done"
        onSubmitEditing={() => onSubmit()}
      />
...
